# gated-claude-code

./: .gitignore  pyproject.toml
docs/brainstorms/: synthetic-timestamp-fidelity-requirements.md
docs/examples/: impute-metabolomics.py
docs/plans/: 2026-07-21-001-feat-synthetic-timestamp-fidelity-plan.md
docs/wiki/: gated-analysis-setup-guide.outline.md  gated-analysis-setup-guide.outline.md.outline-id  gated-analysis-setup-guide.outline.md.outline-sync  gated-analysis-what-we-built.outline.md  gated-analysis-what-we-built.outline.md.outline-id  gated-analysis-what-we-built.outline.md.outline-sync
provision/: RUNBOOK.md  jupyter-command.md  provision.sh  run-analysis-wrapper  run-derivation-wrapper  submit-analysis  submit-derivation  workspace-CLAUDE.md  workspace-CLAUDE.time.md
provision/skills/: README.md
provision/sudoers.d/: cs-gated
scripts/: box_rebuild_assess.sh  offline_reid_assess.py
src/gated_cs/: config.py
tests/: test_bridge_files.py  test_config.py
tests/fixtures/: make_fixtures.py  simple.csv  tabbed.tsv  with_ids.csv
tests/gate/: test_audit.py  test_derivation.py  test_exemplar_impute.py  test_redteam.py  test_redteam_derivation.py  test_review.py  test_run_analysis.py  test_sandbox.py  test_scrub.py  test_sdc.py
tests/profiler/: test_add_layer.py  test_build_dictionary.py  test_build_time.py  test_chunked.py  test_discover.py  test_format_detect.py  test_nice_edges.py  test_nondisclosure.py  test_parse.py  test_profile.py  test_profile_facets.py  test_sensitivity.py  test_subject_key.py  test_synthesize.py  test_temporal.py  (+3 more)
(+39 files in other folders)
