[project]
name = "gated-cs"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0"]  # ACRO deferred to a later hardening pass; v1 uses deterministic SDC rules

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
build-dictionary = "gated_cs.profiler.build_dictionary:main"
build-synthetic = "gated_cs.profiler.build_dictionary:synthetic_main"
run-analysis = "gated_cs.gate.run_analysis:main"
gate-review = "gated_cs.gate.review:main"
gate-api = "gated_cs.service.api:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Make `gated_cs` importable from src/ without an editable install, so tests
# run in a fresh worktree venv (uv skips packaging without a build-system).
pythonpath = ["src"]
